@@ -4,6 +4,7 @@ Version [next]
 [Bugfix] The groff detection logic was not as logical as it should have been.
 [Feature] There is an option to keep both the .ps and the .pdf file now.
 [Feature] Non-Windows users can choose to use Ghostscript (if installed) or pdfroff.
+[Feature] The installed Ghostscript version is now displayed in the settings.
 
 -------------------------------
 
